<resources>
    <!-- App labels and headers -->
    <string name="app_name">Canadian Sales Tax Calculator</string>
    <string name="app_label">Sales Tax Calculator</string>
    <string name="app_short_label">Sales Tax</string>

    <!-- Miscellaneous -->
    <string name="default_result">"0"</string>
    <string name="default_input_decimal">"0."</string>
    <string name="dollarSign">$</string>
    <string name="total">Total after taxes:</string>
    <string name="start_price">Price:</string>
    <string name="location">Location: %1$s</string>
    <string name="tax">GST/HST: %1$s%%</string>
    <string name="memory_input_price">memory_input_price</string>

    <!-- Toasts -->
    <string name="input_too_expensive">"This item is probably too expensive..."</string>
    <string name="input_too_long">"The input price is too long"</string>

    <!-- Buttons -->
    <string name="action_settings">Settings</string>
    <string name="clear_button">Clear</string>

    <!-- List of locations -->
    <string name="AL">AL</string>
    <string name="BC">BC</string>
    <string name="MB">MB</string>
    <string name="NB">NB</string>
    <string name="NL">NL</string>
    <string name="NT">NT</string>
    <string name="NS">NS</string>
    <string name="NU">NU</string>
    <string name="ON">ON</string>
    <string name="QC">QC</string>
    <string name="PE">PE</string>
    <string name="SK">SK</string>
    <string name="YT">YT</string>
    <string name="CUSTOM">CUSTOM</string>

    <!-- Preferences headers -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_display">Display</string>
    <string name="pref_header_about">About</string>

    <!-- Display preferences -->
    <string name="pref_thousands_separators">Display thousands separators</string>
    <string name="pref_thousands_separators_summary">In the input price</string>
    <string name="separator_switch">separator_switch</string>
    <!-- -->
    <string name="dark_theme_switch">dark_theme_switch</string>
    <string name="pref_dark_theme">Enable dark theme</string>
    <string name="pref_dark_theme_summary">The application will restart</string>
    <!-- -->
    <string name="location_name_switch">location_name_switch</string>
    <string name="pref_location_name">Display full location name</string>
    <string name="pref_location_name_summary">If not, will display ISO 3166\-2:CA code</string>

    <!-- General preferences -->
    <string name="pref_title_location">Location selection</string>
    <string name="location_list">location_list</string>
    <string-array name="pref_location_list">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Northwest Territories</item>
        <item>Nova Scotia</item>
        <item>Nunavut</item>
        <item>Ontario</item>
        <item>Quebec</item>
        <item>Prince Edward Island</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
        <item>Custom</item>
    </string-array>
    <string-array name="pref_location_list_values">
        <item>@string/AL</item>
        <item>@string/BC</item>
        <item>@string/MB</item>
        <item>@string/NB</item>
        <item>@string/NL</item>
        <item>@string/NT</item>
        <item>@string/NS</item>
        <item>@string/NU</item>
        <item>@string/ON</item>
        <item>@string/QC</item>
        <item>@string/PE</item>
        <item>@string/SK</item>
        <item>@string/YT</item>
        <item>@string/CUSTOM</item>
    </string-array>
    <!-- -->
    <string name="penny_rounding_switch">penny_rounding_switch</string>
    <string name="pref_penny_rounding">Enable penny rounding</string>
    <!-- -->
    <string name="pref_custom_percentage">Custom percentage</string>
    <string name="custom_percentage">custom_percentage</string>
    <string name="custom_percentage_default">1</string>
    <string name="custom_percentage_summary">Only applies if \'custom\' location selected</string>
    <string name="custom_percentage_dialog">Enter your custom percentage</string>

    <!-- About preferences -->
    <string name="pref_about_version">Version</string>
    <string name="version">version</string>
    <!-- -->
    <string name="pref_about_author">Author</string>
    <string name="author">Teddy Gustiaux</string>
    <string name="author_website">https://gustiaux.com</string>
    <!-- -->
    <string name="pref_about_license">License</string>
    <string name="license_summary">MIT</string>
    <string name="license_website">https://opensource.org/licenses/MIT</string>
    <!-- -->
    <string name="pref_about_source">Source code</string>
    <string name="source_summary">See on GitHub</string>
    <string name="source_website">https://github.com/teddy-gustiaux/canadian-sales-tax-calculator</string>
    <!-- -->
    <string name="pref_about_taxes">Canada Revenue Agency</string>
    <string name="taxes_summary">Official source used for GST/HST rates</string>
    <string name="taxes_website">http://www.cra-arc.gc.ca/tx/bsnss/tpcs/gst-tps/rts-eng.html</string>
    <!-- -->
    <string name="pref_about_icon">Icon</string>
    <string name="icon_summary">Adapted from Calculator by To Uyen</string>
    <string name="icon_website">https://thenounproject.com/search/?q=calculator&amp;i=670846</string>
</resources>
